<resources>
    <string name="app_name">AndroidFeedback</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME PAGE</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_assignment">ASSIGNMENT</string>
    <string name="menu_class">CLASS</string>
    <string name="menu_module">MODULE</string>
    <string name="menu_enrollment">ENROLLMENT</string>
    <string name="menu_feedback">FEEDBACK</string>
    <string name="menu_result">RESULT</string>
    <string name="menu_question">QUESTION</string>
    <string name="menu_contact">CONTACT</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="error_add_class_name">Please enter class name and less than 255 characters</string>
    <string name="error_add_class_capacity">Please enter capacity is integer and larger than 0</string>
    <string name="error_add_class_date">Please choose date or fill full mm/dd/yyyy</string>
    <string name="error_add_module_name">Please enter class name and less than 255 characters</string>
    <string name="error_add_module_date_end">Please choose date end or fill full mm/dd/yyyy</string>
    <string name="error_add_module_date_start">Please choose date start or fill full mm/dd/yyyy</string>

</resources>